# rt-1

./: README.md  pyproject.toml
rt1/: __init__.py  action_tokenizer.py  config.py  film.py  rt1_model.py  token_learner.py  transformer.py
tests/: test_action_tokenizer.py  test_film.py  test_rt1_model.py  test_token_learner.py  test_transformer.py
