[project]
name = "rt1"
version = "0.1.0"
description = "RT-1: Robotics Transformer for Real-World Control at Scale - PyTorch implementation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "timm>=1.0.0",
    "sentence-transformers>=4.0.0",
    "numpy>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.9.0",
]
